--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -5,14 +5,13 @@
 <body class="container">
     <h1 th:text="${title}">Default Title</h1>
     <nav th:replace="fragments :: navigation"></nav>
-    <p th:unless="${categories} and ${categories.size()}">no categories :(</p>
 
+    <ul>
+        <li th:each="cheese : ${cheeses}" th:text="${cheese.name}"></li>
+    </ul>
 
-<ul>
-    <li th:each="category : ${categories}" th:text="${category.name}"></li>
-</ul>
-
-<button> <a href="/category/add">Add Category</a></button>
+    <p th:unless="${cheeses.size()}">No cheeses yet!</p>
+    <p><a th:href="'/menu/add-item/' + ${menuId}">Add Cheese to this menu</a></p>
 
 </body>
 </html>
